Fix #76 - The button OK is not aligned with the answer text area

--- a/src/main/webapp/css/checklist.css
+++ b/src/main/webapp/css/checklist.css
@@ -118,3 +118,7 @@ a.anchor {
 .goto-checklist {
     vertical-align: middle;
 }
+
+.addAnswer {
+    vertical-align: super;
+}
